--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/ntfavicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nice Touch - The OS for Creators</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
